src/snapshots/cronexpr__parser__tests__parse_crontab-21.snap
---
source: src/parser.rs
expression: "parse_crontab(\"1,2,10,100 1 1 1 * Asia/Shanghai\").unwrap_err()"
---
failed to parse crontab expression:
1,2,10,100 1 1 1 * Asia/Shanghai
^ value must be in range 0..=59; found 100
