src/snapshots/cronexpr__parser__tests__parse_crontab.snap
---
source: src/parser.rs
expression: "parse_crontab(\"* * * * * Asia/Shanghai\").unwrap()"
---
Crontab {
    minutes: PossibleLiterals {
        values: {
            0,
            1,
            2,
            3,
            4,
            5,
            6,
            7,
            8,
            9,
            10,
            11,
            12,
            13,
            14,
            15,
            16,
            17,
            18,
            19,
            20,
            21,
            22,
            23,
            24,
            25,
            26,
            27,
            28,
            29,
            30,
            31,
            32,
            33,
            34,
            35,
            36,
            37,
            38,
            39,
            40,
            41,
            42,
            43,
            44,
            45,
            46,
            47,
            48,
            49,
            50,
            51,
            52,
            53,
            54,
            55,
            56,
            57,
            58,
            59,
        },
    },
    hours: PossibleLiterals {
        values: {
            0,
            1,
            2,
            3,
            4,
            5,
            6,
            7,
            8,
            9,
            10,
            11,
            12,
            13,
            14,
            15,
            16,
            17,
            18,
            19,
            20,
            21,
            22,
            23,
        },
    },
    months: PossibleLiterals {
        values: {
            1,
            2,
            3,
            4,
            5,
            6,
            7,
            8,
            9,
            10,
            11,
            12,
        },
    },
    days_of_month: PossibleLiterals {
        values: {
            1,
            2,
            3,
            4,
            5,
            6,
            7,
            8,
            9,
            10,
            11,
            12,
            13,
            14,
            15,
            16,
            17,
            18,
            19,
            20,
            21,
            22,
            23,
            24,
            25,
            26,
            27,
            28,
            29,
            30,
            31,
        },
    },
    days_of_week: PossibleLiterals {
        values: {
            1,
            2,
            3,
            4,
            5,
            6,
            7,
        },
    },
    timezone: TimeZone(
        TZif(
            "Asia/Shanghai",
        ),
    ),
}
