src/snapshots/cronexpr__parser__tests__parse_crontab_failed-11.snap
---
source: src/parser.rs
expression: "parse_crontab(\"29--30 * * * * Asia/Shanghai\").unwrap_err()"
---
failed to parse crontab expression:
29--30 * * * * Asia/Shanghai
  ^ malformed expression
