src/snapshots/cronexpr__parser__tests__parse_crontab_failed-17.snap
---
source: src/parser.rs
expression: "parse_crontab(\"0 0\").unwrap_err()"
---
malformed expression:
0 0
   ^ missing days of month
