src/snapshots/cronexpr__parser__tests__parse_crontab_failed-19.snap
---
source: src/parser.rs
expression: "parse_crontab(\"* 4 *\").unwrap_err()"
---
failed to parse crontab expression:
* 4 *
      ^ malformed expression
